# textbuilder

./: .gitignore  Cargo.toml  README.md
src/: appendable.rs  errors.rs  formatter_builder.rs  lib.rs  string_builder.rs  text_builder.rs  text_builder_config.rs  text_display.rs  text_index.rs  textbuilder.rs  traits.rs
src/scratch/: mod.rs  textbuilder.rs
tests/: append_tests.rs  complex_tests.rs  formatter_builder_tests.rs  string_builder_tests.rs  text_builder_tests.rs
